# smirk

./: .gitignore  demo.py  pyproject.toml  quick_install.sh
src/smirk/: base_trainer.py  smirk_trainer.py
src/smirk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smirk/FLAME/: FLAME.py
src/smirk/models/MICA/: mica.py
src/smirk/renderer/: renderer.py
src/smirk/utils/: masking.py
utils/: mediapipe_utils.py
