[project]
name = "smirk"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = "==3.10.*"
dependencies = [
    "loguru==0.7.3",
    "opencv-python==4.11.0.86",
    "tensorboardX==2.6.4",
    "moviepy==2.2.1",
    "tqdm==4.67.1",
    "torch==2.4.1",
    "scipy>=1.15.0",
    "tensorboard==2.19.0",
    "scikit-learn==1.7.0",
    "matplotlib==3.10.3",
    "omegaconf>=2.3.0",
    "ipykernel>=6.30.0",
    "pip>=25.2",
    "pyqt6>=6.9.1",
    "mediapipe>=0.10.21",
    "scikit-image>=0.25.2",
    "albumentations>=2.0.8",
    "pytorch3d==0.7.8+pt2.4.1cu121",
    "timm>=1.0.19",
    "gdown>=5.2.0",
]

[tool.uv]
extra-index-url = ["https://miropsota.github.io/torch_packages_builder"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
